<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"UILayoutTest "</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="content">Type something</string>
    <string name="send">Send</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>

</resources>
